[project]
name = "setup-pdm"
version = "0.0.0"
authors = [ { name = "Frost Ming", email = "mianghong@gmail.com" }, ]
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "certifi; python_version=='3.9'",
    "pytz; python_version=='3.10'",
    "setuptools; python_version=='3.11'",
    "six; python_version=='3.12'",
    "urllib3; python_version=='3.13'",
]
